--- a/style.css
+++ b/style.css
@@ -4,58 +4,63 @@ body{
     background-color: #e8e5e8;
     }
     .nav{
-        margin: 0;
-        padding: 0;
-        width: 200px;
+        
         background-color: #f1f1f1;
-        position: fixed;
-        height: 100%;
-        overflow: auto;
+        overflow: hidden;
+        text-align: center;
+        
     }
-    .nav > .nav-header{
-    display: inline;
     
-    
-    }
-    .nav > .nav-header > .nav-title{
-    display: inline-block;
-    font-family:Courier New;
-    padding: 10px 10px 10px 10px;
-    font-size:22px;
-    color:rgb(0, 0, 0);
-    font-weight:550;
-    
-    }
-    .nav > .nav-links {
-        display: block;
+   
+   .nav > .nav-links {
+        
+       
         color: black;
         padding: 0px;
         text-decoration: none;
-        transition: .3s;
-        width: 200px;
-    }
+        text-align: center;
+       
+        
+     }
     .nav li{
         float:left;
-        clear:left;
-        margin-right: 20%;
-        vertical-align: top;
-        margin-left:1%;
+       
+        display:inline;
+        text-align: center;
+    
     }
     .nav > .nav-links > ul li a{
     color: rgb(0, 0, 0);
-    line-height:30px;
     font-size:18px;
     padding: 0 8px;
     text-decoration: none;
+   
     }
     .nav > .nav-links > ul li{
-    display: inline-block;
-    background-color: rgb(255, 255, 255);
+     background-color: rgb(255, 255, 255);
+    
     }
     .nav > .nav-links > ul li:hover{
     background-color:coral;
     
     }
+    opopop
+ 
+    ul{
+        display:inline-block;
+        vertical-align: center;
+        
+    }
+    .nav > .socials > .Social-links > ul li a{
+        margin-left: 2700%;
+        margin-right: 0%;
+    }
+
+    
+   
+
+   
+    
     .appy iframe{
         margin-left:40%;
     }
